# hello_flask

./: DBbooks.py  DBnewbooks.py  Procfile  books-collection.db  forms.py  hello.py  index.html  main.py  main1.py  main2.py  main3.py  main4.py  main5.py  main6.py  main7.py  main8.py  main9.py  pyproject.toml  random_number.py  requirements.txt  server.py
instance/: blog.db  books.db  cafes.db  movies.db  posts.db  users.db
templates/: about.html  about2.html  about3.html  add.html  add2.html  blog.html  cafes.html  contact.html  contact1.html  contact2.html  contact3.html  denied.html  edit2.html  example.html  footer.html  guess.html  header.html  header2.html  index.html  index1.html  index2.html  index3.html  index5.html  index6.html  index7.html  index8.html  index9.html  login2.html  login8.html  login9.html  make-post2.html  make-post3.html  post.html  post1.html  post2.html  post3.html  register.html  register3.html  secrets.html  select2.html  (+1 more)
